<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/mountain_landscape" />

    <LinearLayout
        android:id="@+id/linerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/continue_button"
                    style="@style/menu_button_card_style"
                    android:visibility="gone">

                    <TextView
                        style="@style/menu_button_text_style"
                        android:text="@string/continue_text" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/new_game"
                    style="@style/menu_button_card_style">

                    <TextView
                        style="@style/menu_button_text_style"
                        android:text="@string/new_game" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/about"
                    style="@style/menu_button_card_style">

                    <TextView
                        style="@style/menu_button_text_style"
                        android:text="@string/about" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/exit"
                    style="@style/menu_button_card_style">

                    <TextView
                        style="@style/menu_button_text_style"
                        android:text="@string/exit" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:foreground="@drawable/clickable_effect"
        android:src="@color/dark_ink"
        app:layout_constraintEnd_toEndOf="@id/linerLayout"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/linerLayout"
        app:layout_constraintTop_toTopOf="@+id/linerLayout"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <ImageView
        android:id="@+id/volume"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/mute_icon"
        app:layout_constraintBottom_toBottomOf="@id/shapeableImageView"
        app:layout_constraintEnd_toEndOf="@id/shapeableImageView"
        app:layout_constraintStart_toStartOf="@id/shapeableImageView"
        app:layout_constraintTop_toTopOf="@id/shapeableImageView"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>